# jbuff

./: .gitignore  README.md  haxelib.json
cpp/: CMakeLists.txt
cpp/include/jbuff/: jbuff.hpp
cpp/src/: jbuff.cpp
hx/jbuff/: JBuffBuilder.hx  JBuffFile.hx  JBuffReader.hx
test/: Test.cpp  Test.hx  build_test_osx.sh  test.hxml
